; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_network_gfx.c_network_gfx_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_network_gfx.c_network_gfx_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@network_menu_frame = common dso_local global %struct.TYPE_5__* null, align 8
@network_video_temp_buf = common dso_local global %struct.TYPE_5__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @network_gfx_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @network_gfx_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %5, %struct.TYPE_5__** %3, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** @network_menu_frame, align 8
  %7 = icmp ne %struct.TYPE_5__* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** @network_menu_frame, align 8
  %10 = call i32 @free(%struct.TYPE_5__* %9)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** @network_menu_frame, align 8
  br label %11

11:                                               ; preds = %8, %1
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** @network_video_temp_buf, align 8
  %13 = icmp ne %struct.TYPE_5__* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @network_video_temp_buf, align 8
  %16 = call i32 @free(%struct.TYPE_5__* %15)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** @network_video_temp_buf, align 8
  br label %17

17:                                               ; preds = %14, %11
  %18 = call i32 (...) @font_driver_free_osd()
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp sge i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %17
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @socket_close(i64 %26)
  br label %28

28:                                               ; preds = %23, %17
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = icmp ne %struct.TYPE_5__* %29, null
  br i1 %30, label %31, label %34

31:                                               ; preds = %28
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %33 = call i32 @free(%struct.TYPE_5__* %32)
  br label %34

34:                                               ; preds = %31, %28
  ret void
}

declare dso_local i32 @free(%struct.TYPE_5__*) #1

declare dso_local i32 @font_driver_free_osd(...) #1

declare dso_local i32 @socket_close(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
